@@ -104,13 +104,28 @@ RAT4_ARG_ENABLE(
     [rat4_maybe_werror=-Werror],
     [rat4_maybe_werror=''])
 
+# Option `--enable-maintainer-make-rules' tells that maintaner-specific
+# rules should be imported in the GNUmakefile.
+RAT4_ARG_ENABLE(
+    [maintainer-make-rules],
+    [Import maintaner-specific rules in the GNUmakefile. Use it only if
+      you have GNU make, and you know what you are doing. Also, note that
+      this option has *NOTHING* to do with the infamous automake's
+      "maintainer-mode".],dnl '# font-lock
+    [rat4_enable_maintainer_make_rules=yes],
+    [rat4_enable_maintainer_make_rules=no])
+
+m4_pattern_allow([ENABLE_MAINTAINER_MAKE_RULES])
+AM_CONDITIONAL([ENABLE_MAINTAINER_MAKE_RULES],
+               [test x"$rat4_enable_maintainer_make_rules" = x"yes"])
+
 # Enable as many compiler warnings as possible (this is tailered to gcc,
 # but should not cause failures of problems for other compilers).
 # This code *must* be set after any check on cc, c headers, c functions
 # or c libraries, as stricter handling of warnings can interfere with
 # autoconf checks.
 for flag in -Wall -Wextra -Wshadow -pedantic $rat4_maybe_werror; do
-    RAT4_CACHE_CHECK_CC_FLAG([$flag],[],[],[CFLAGS="$CFLAGS $flag"])
+    RAT4_CACHE_CHECK_CC_FLAG([$flag], [], [], [CFLAGS="$CFLAGS $flag"])
 done
 AS_UNSET([flag])
 
